--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -6,6 +6,9 @@
   display: flex;
   justify-content: space-between;
 }
-.nav-color {
+.nav-header-color {
+  background-color: #87cefa;
+}
+.nav-footer-color {
   background-color: #87cefa;
 }
