--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -1,5 +1,5 @@
 header
-  nav.navbar.navbar-expand-lg.navbar-light.nav-color.p-3
+  nav.navbar.navbar-expand-lg.navbar-light.nav-header-color.p-3
     .container.m-0.nav-menu
       = link_to 'Tranker', '#', class:'navbar-brand ml-5', id:'app-title'
       #navbarNavDropdown.mr-5
