--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -6,4 +6,4 @@ header
         .text-right
           ul.navbar-nav
             li.nav-item
-              = link_to '設定', '#', class:'nav-link'
+              = link_to '説明', '#', class:'nav-link'
