Fix:ダブルクォーテーションをシングルクォーテーションに修正

--- a/app/views/followed_users/_ranker.html.slim
+++ b/app/views/followed_users/_ranker.html.slim
@@ -1,7 +1,7 @@
-h2 = rank.to_s + "位"
+h2 = rank.to_s + '位'
 p = ranker.name
 p = ranker.screen_name
 p = ranker.total_points.to_s + 'points'
-=link_to 'Follow '+ranker.screen_name, ranker.followed_button_url(ranker.screen_name), class:"twitter-follow-button", 'data-show-count': "false"
+=link_to 'Follow '+ranker.screen_name, ranker.followed_button_url(ranker.screen_name), class:'twitter-follow-button', 'data-show-count': 'false'
 img src=ranker.profile_image_url
-script async="" charset="utf-8" src="https://platform.twitter.com/widgets.js"
+script async='' charset='utf-8' src='https://platform.twitter.com/widgets.js'
